--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "mvc-tech-blog",
+  "name": "tech-blog",
   "version": "1.0.0",
-  "description": "[![License](https://img.shields.io/badge/License-MIT-brightgreen.svg)](https://opensource.org/licenses/MIT)",
   "main": "server.js",
   "engines": {
     "node": "14.x",
@@ -17,8 +16,6 @@
     "type": "git"
   },
   "keywords": [],
-  "author": "test",
-  "license": "ISC",
   "bugs": {
   },
   "dependencies": {
